# measures-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.sh  format_measures.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
docs/: Architecture.md  Motivation.md  Tutorial.md
examples/: air-mass-measures.rs  air-mass-naked.rs  air-mass_measures.rs  air-mass_naked.rs  base.rs  bench.rs  full.rs  haversine-measures.rs  haversine-naked.rs  haversine_measures.rs  matrix-mul.rs  mks.rs  nbody-approx-measures.rs  nbody-measures.rs  nbody-naked.rs  nbody_approx-measures.rs  nbody_measures.rs  resistor-mesh-measures.rs  resistor-mesh-naked.cpp  resistor-mesh-naked.rs  resistor-mesh_measures.rs  resistor-mesh_naked.cpp  resistor-mesh_naked.rs  serde.rs  si.rs  unit.rs  user_defined_unit.rs
examples/units/: mod.rs
src/: angle.rs  define_measure_types.rs  define_units_relationship.rs  dimensionless.rs  lib.rs  matrix_utils.rs  test_utils.rs  traits.rs
src/inner/: mod.rs
tests/: all-define-units-relationship.rs  angles_decl.rs  define_units_relationship.rs  disallowed_operations.rs  test_angles_consts.rs
tests/angles_decl/: mod.rs
tests/approx/: test_affine_map_2d.rs  test_affine_map_3d.rs  test_derived_1d.rs  test_derived_2d.rs  test_derived_3d.rs  test_linear_map_2d.rs  test_linear_map_3d.rs  test_measure_1d.rs  test_measure_2d.rs  test_measure_3d.rs  test_measure_point_1d.rs  test_measure_point_2d.rs  test_measure_point_3d.rs  test_signed_directions.rs  test_unsigned_directions.rs
tests/define-units-relationship/: 1_is_1_mul_1.rs  1_is_1_mul_itself.rs  1_is_2_cross_2.rs  1_is_2_cross_itself.rs  1_is_2_mul_2.rs  1_is_2_mul_itself.rs  1_is_3_mul_3.rs  1_is_3_mul_itself.rs  2_is_1_mul_2.rs  2_is_2_mul_1.rs  3_is_1_mul_3.rs  3_is_3_cross_3.rs  3_is_3_cross_itself.rs  3_is_3_mul_1.rs  fail_1_is_1_mul_2.rs  fail_1_is_1_mul_2.stderr  fail_1_is_bad_literal_div_1.rs  fail_1_is_bad_literal_div_1.stderr  fail_1_mul_1_mul_1.rs  fail_1_mul_1_mul_1.stderr  fail_4_is_1_mul_1.rs  fail_4_is_1_mul_1.stderr
tests/define_units_relationship/: 1_is_2_cross_itself.rs  1_is_2_mul_2.rs  1_is_3_mul_3.rs  2_is_1_mul_2.rs  (+10 more)
(+57 files in other folders)
