[package]
name = "measures-rs"
version = "0.1.0"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A Rust macro to generate a library to statically encapsulate numbers in objects having a unit of measurement, allowing any meaningful operation, but statically forbidding meaningless operations with them."
repository = "https://github.com/carlomilanesi/measures-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[lib]
name = "measures"

[dev-dependencies]
nalgebra = "0.32.3"
trybuild = { version = "1.0", features = ["diff"] }
rand = "0.8.5"
faer = "0.17.1"
ndarray = "0.15.6"
num-traits = "0.2.18"
