[package]
name = "measures-rs"
version = "0.1.0"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A Rust macro to generate a library to statically encapsulate numbers in objects having a unit of measurement, allowing any meaningful operation, but statically forbidding meaningless operations with them."
repository = "https://github.com/carlomilanesi/measures-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[lib]
name = "measures"

[dev-dependencies]

[dependencies]
faer = "0.22.6"
nalgebra = "0.34.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = "0.9.2"
trybuild = "1.0.111"
