[package]
name = "measures-rs"
version = "0.1.1"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A Rust macro to generate a library to statically encapsulate numbers in objects having a unit of measurement, allowing any meaningful operation, but statically forbidding meaningless operations with them. Optionally, measures have uncertainties, which are propagated in every operation."
repository = "https://github.com/carlomilanesi/measures-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[lib]
name = "measures"

[dependencies]

[dev-dependencies]
faer = "0.23.2"
nalgebra = "0.34.1"
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = "0.9.2"
trybuild = "1.0.111"
